# designing-data-intensive-applications

./: README.md  pyproject.toml
src/: starter.py
storage/: docstore.json  index_store.json
