[project]
name = "designing-data-intensive-applications"
version = "0.1.0"
description = ""
authors = [
    {name = "Joseph Muller",email = "jtmuller5@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "llama-index (>=0.12.14,<0.13.0)",
    "chromadb (>=0.6.3,<0.7.0)",
    "llama-index-llms-ollama (>=0.5.0,<0.6.0)",
    "llama-index-embeddings-huggingface (>=0.5.1,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
